@startuml
package Model {

class TaTracker

package Session {
class Session
class UniqueSessionList
}
package Claims {
class UniqueDoneSessionList
}
package Module {
class Module
class UniqueModuleList
}
}

TaTracker --> "1 " UniqueSessionList

UniqueModuleList -right-> "*" Module

Module --> "1  " UniqueSessionList

UniqueSessionList -right-> "*" Session

Session --> "0..*" UniqueDoneSessionList


@enduml

